flutter-bindings/bls_signatures_ffi/ios/bls/schemes.h

typedef void* CCoreMPL;
typedef CCoreMPL CBasicSchemeMPL;
// CoreMPL
CPrivateKey CCoreMPLKeyGen(const CCoreMPL scheme, const void* seed, const size_t seedLen, bool* didErr);
CG1Element CCoreMPSkToG1(const CCoreMPL scheme, const CPrivateKey sk);
CG2Element CCoreMPLSign(const CCoreMPL scheme, const CPrivateKey sk, const void* msg, const size_t msgLen);
bool CCoreMPLVerify(const CBasicSchemeMPL scheme,
                    const CG1Element pk,
                    const void* msg,
                    const size_t msgLen,
                    const CG2Element sig);
CG1Element CCoreMPLAggregatePubKeys(const CCoreMPL scheme, void** pubKeys, const size_t pkLen);
CG2Element CCoreMPLAggregateSigs(const CCoreMPL scheme, void** sigs, const size_t sigLen);
CPrivateKey CCoreMPLDeriveChildSk(const CCoreMPL scheme, const CPrivateKey sk, const uint32_t index);
CPrivateKey CCoreMPLDeriveChildSkUnhardened(const CCoreMPL scheme, const CPrivateKey sk, const uint32_t index);