flutter-bindings/bls_signatures_ffi/ios/bls/elements.h

typedef void* CG1Element;
typedef void* CG2Element;
typedef void* CPrivateKey;