flutter-bindings/bls_signatures_ffi/ios/bls/privatekey.h

CPrivateKey CPrivateKeyFromBytes(const void* data, const bool modOrder, bool* didErr);
CPrivateKey CPrivateKeyAggregate(void** sks, const size_t len);
CG1Element CPrivateKeyGetG1Element(const CPrivateKey sk, bool* didErr);
CG2Element CPrivateKeyGetG2Element(const CPrivateKey sk, bool* didErr);
CG2Element CPrivateKeyGetG2Power(const CPrivateKey sk, const CG2Element el);
bool CPrivateKeyIsEqual(const CPrivateKey sk1, const CPrivateKey sk2);
void* CPrivateKeySerialize(const CPrivateKey sk);
void CPrivateKeyFree(const CPrivateKey sk);
size_t CPrivateKeySizeBytes();