flutter-bindings/bls_signatures_ffi/lib/src/blschia.h.dart


  CPrivateKey CPrivateKeyFromBytes(
    ffi.Pointer<ffi.Void> data,
    bool modOrder,
    ffi.Pointer<ffi.Uint8> didErr,
  ) {
    return _CPrivateKeyFromBytes(
      data,
      modOrder ? 1 : 0,
      didErr,
    );
  }

  late final _CPrivateKeyFromBytesPtr = _lookup<
      ffi.NativeFunction<
          CPrivateKey Function(ffi.Pointer<ffi.Void>, ffi.Uint8,
              ffi.Pointer<ffi.Uint8>)>>('CPrivateKeyFromBytes');
  late final _CPrivateKeyFromBytes = _CPrivateKeyFromBytesPtr.asFunction<
      CPrivateKey Function(
          ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Uint8>)>();

  CPrivateKey CPrivateKeyAggregate(
    ffi.Pointer<ffi.Pointer<ffi.Void>> sks,
    int len,
  ) {
    return _CPrivateKeyAggregate(
      sks,
      len,
    );
  }

  late final _CPrivateKeyAggregatePtr = _lookup<
      ffi.NativeFunction<
          CPrivateKey Function(ffi.Pointer<ffi.Pointer<ffi.Void>>,
              size_t)>>('CPrivateKeyAggregate');
  late final _CPrivateKeyAggregate = _CPrivateKeyAggregatePtr.asFunction<
      CPrivateKey Function(ffi.Pointer<ffi.Pointer<ffi.Void>>, int)>();

  CG1Element CPrivateKeyGetG1Element(
    CPrivateKey sk,
    ffi.Pointer<ffi.Uint8> didErr,
  ) {
    return _CPrivateKeyGetG1Element(
      sk,
      didErr,
    );
  }

  late final _CPrivateKeyGetG1ElementPtr = _lookup<
      ffi.NativeFunction<
          CG1Element Function(
              CPrivateKey, ffi.Pointer<ffi.Uint8>)>>('CPrivateKeyGetG1Element');
  late final _CPrivateKeyGetG1Element = _CPrivateKeyGetG1ElementPtr.asFunction<
      CG1Element Function(CPrivateKey, ffi.Pointer<ffi.Uint8>)>();

  CG2Element CPrivateKeyGetG2Element(
    CPrivateKey sk,
    ffi.Pointer<ffi.Uint8> didErr,
  ) {
    return _CPrivateKeyGetG2Element(
      sk,
      didErr,
    );
  }

  late final _CPrivateKeyGetG2ElementPtr = _lookup<
      ffi.NativeFunction<
          CG2Element Function(
              CPrivateKey, ffi.Pointer<ffi.Uint8>)>>('CPrivateKeyGetG2Element');
  late final _CPrivateKeyGetG2Element = _CPrivateKeyGetG2ElementPtr.asFunction<
      CG2Element Function(CPrivateKey, ffi.Pointer<ffi.Uint8>)>();

  CG2Element CPrivateKeyGetG2Power(
    CPrivateKey sk,
    CG2Element el,
  ) {
    return _CPrivateKeyGetG2Power(
      sk,
      el,
    );
  }

  late final _CPrivateKeyGetG2PowerPtr =
      _lookup<ffi.NativeFunction<CG2Element Function(CPrivateKey, CG2Element)>>(
          'CPrivateKeyGetG2Power');
  late final _CPrivateKeyGetG2Power = _CPrivateKeyGetG2PowerPtr.asFunction<
      CG2Element Function(CPrivateKey, CG2Element)>();

  bool CPrivateKeyIsEqual(
    CPrivateKey sk1,
    CPrivateKey sk2,
  ) {
    return _CPrivateKeyIsEqual(
          sk1,
          sk2,
        ) !=
        0;
  }

  late final _CPrivateKeyIsEqualPtr =
      _lookup<ffi.NativeFunction<ffi.Uint8 Function(CPrivateKey, CPrivateKey)>>(
          'CPrivateKeyIsEqual');
  late final _CPrivateKeyIsEqual = _CPrivateKeyIsEqualPtr.asFunction<
      int Function(CPrivateKey, CPrivateKey)>();

  ffi.Pointer<ffi.Void> CPrivateKeySerialize(
    CPrivateKey sk,
  ) {
    return _CPrivateKeySerialize(
      sk,
    );
  }

  late final _CPrivateKeySerializePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Void> Function(CPrivateKey)>>(
          'CPrivateKeySerialize');
  late final _CPrivateKeySerialize = _CPrivateKeySerializePtr.asFunction<
      ffi.Pointer<ffi.Void> Function(CPrivateKey)>();

  void CPrivateKeyFree(
    CPrivateKey sk,
  ) {
    return _CPrivateKeyFree(
      sk,
    );
  }

  late final _CPrivateKeyFreePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(CPrivateKey)>>(
          'CPrivateKeyFree');
  late final _CPrivateKeyFree =
      _CPrivateKeyFreePtr.asFunction<void Function(CPrivateKey)>();

  int CPrivateKeySizeBytes() {
    return _CPrivateKeySizeBytes();
  }

  late final _CPrivateKeySizeBytesPtr =
      _lookup<ffi.NativeFunction<size_t Function()>>('CPrivateKeySizeBytes');
  late final _CPrivateKeySizeBytes =
      _CPrivateKeySizeBytesPtr.asFunction<int Function()>();

  void SecFree(
    ffi.Pointer<ffi.Void> p,
  ) {
    return _SecFree(
      p,
    );
  }

  late final _SecFreePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'SecFree');
  late final _SecFree =
      _SecFreePtr.asFunction<void Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Pointer<ffi.Void>> AllocPtrArray(
    int len,
  ) {
    return _AllocPtrArray(
      len,
    );
  }

  late final _AllocPtrArrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Pointer<ffi.Void>> Function(
              size_t)>>('AllocPtrArray');
  late final _AllocPtrArray = _AllocPtrArrayPtr.asFunction<
      ffi.Pointer<ffi.Pointer<ffi.Void>> Function(int)>();

  void SetPtrArray(
    ffi.Pointer<ffi.Pointer<ffi.Void>> arrPtr,
    ffi.Pointer<ffi.Void> elemPtr,
    int index,
  ) {
    return _SetPtrArray(
      arrPtr,
      elemPtr,
      index,
    );
  }

  late final _SetPtrArrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Pointer<ffi.Void>>,
              ffi.Pointer<ffi.Void>, ffi.Int32)>>('SetPtrArray');
  late final _SetPtrArray = _SetPtrArrayPtr.asFunction<
      void Function(
          ffi.Pointer<ffi.Pointer<ffi.Void>>, ffi.Pointer<ffi.Void>, int)>();

  void FreePtrArray(
    ffi.Pointer<ffi.Pointer<ffi.Void>> inPtr,
  ) {
    return _FreePtrArray(
      inPtr,
    );
  }

  late final _FreePtrArrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Pointer<ffi.Void>>)>>('FreePtrArray');
  late final _FreePtrArray = _FreePtrArrayPtr.asFunction<
      void Function(ffi.Pointer<ffi.Pointer<ffi.Void>>)>();

  ffi.Pointer<ffi.Void> GetPtrAtIndex(
    ffi.Pointer<ffi.Pointer<ffi.Void>> arrPtr,
    int index,
  ) {
    return _GetPtrAtIndex(
      arrPtr,
      index,
    );
  }

  late final _GetPtrAtIndexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Pointer<ffi.Void>>, ffi.Int32)>>('GetPtrAtIndex');
  late final _GetPtrAtIndex = _GetPtrAtIndexPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(
          ffi.Pointer<ffi.Pointer<ffi.Void>>, int)>();

  ffi.Pointer<ffi.Uint8> SecAllocBytes(
    int len,
  ) {
    return _SecAllocBytes(
      len,
    );
  }

  late final _SecAllocBytesPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Uint8> Function(size_t)>>(
          'SecAllocBytes');
  late final _SecAllocBytes =
      _SecAllocBytesPtr.asFunction<ffi.Pointer<ffi.Uint8> Function(int)>();

  ffi.Pointer<ffi.Void> GetAddressAtIndex(
    ffi.Pointer<ffi.Uint8> ptr,
    int index,
  ) {
    return _GetAddressAtIndex(
      ptr,
      index,
    );
  }

  late final _GetAddressAtIndexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Uint8>, ffi.Int32)>>('GetAddressAtIndex');
  late final _GetAddressAtIndex = _GetAddressAtIndexPtr.asFunction<
      ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Uint8>, int)>();

  ffi.Pointer<ffi.Int8> GetLastErrorMsg() {
    return _GetLastErrorMsg();
  }

  late final _GetLastErrorMsgPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Int8> Function()>>(
          'GetLastErrorMsg');
  late final _GetLastErrorMsg =
      _GetLastErrorMsgPtr.asFunction<ffi.Pointer<ffi.Int8> Function()>();

  CPrivateKey CCoreMPLKeyGen(
    CCoreMPL scheme,
    ffi.Pointer<ffi.Void> seed,
    int seedLen,
    ffi.Pointer<ffi.Uint8> didErr,
  ) {
    return _CCoreMPLKeyGen(
      scheme,
      seed,
      seedLen,
      didErr,
    );
  }

  late final _CCoreMPLKeyGenPtr = _lookup<
      ffi.NativeFunction<
          CPrivateKey Function(CCoreMPL, ffi.Pointer<ffi.Void>, size_t,
              ffi.Pointer<ffi.Uint8>)>>('CCoreMPLKeyGen');
  late final _CCoreMPLKeyGen = _CCoreMPLKeyGenPtr.asFunction<
      CPrivateKey Function(
          CCoreMPL, ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Uint8>)>();

  CG1Element CCoreMPSkToG1(
    CCoreMPL scheme,
    CPrivateKey sk,
  ) {
    return _CCoreMPSkToG1(
      scheme,
      sk,
    );
  }

  late final _CCoreMPSkToG1Ptr =
      _lookup<ffi.NativeFunction<CG1Element Function(CCoreMPL, CPrivateKey)>>(
          'CCoreMPSkToG1');
  late final _CCoreMPSkToG1 = _CCoreMPSkToG1Ptr.asFunction<
      CG1Element Function(CCoreMPL, CPrivateKey)>();

  CG2Element CCoreMPLSign(
    CCoreMPL scheme,
    CPrivateKey sk,
    ffi.Pointer<ffi.Void> msg,
    int msgLen,
  ) {
    return _CCoreMPLSign(
      scheme,
      sk,
      msg,
      msgLen,
    );
  }

  late final _CCoreMPLSignPtr = _lookup<
      ffi.NativeFunction<
          CG2Element Function(CCoreMPL, CPrivateKey, ffi.Pointer<ffi.Void>,
              size_t)>>('CCoreMPLSign');
  late final _CCoreMPLSign = _CCoreMPLSignPtr.asFunction<
      CG2Element Function(CCoreMPL, CPrivateKey, ffi.Pointer<ffi.Void>, int)>();

  bool CCoreMPLVerify(
    CBasicSchemeMPL scheme,
    CG1Element pk,
    ffi.Pointer<ffi.Void> msg,
    int msgLen,
    CG2Element sig,
  ) {
    return _CCoreMPLVerify(
          scheme,
          pk,
          msg,
          msgLen,
          sig,
        ) !=
        0;
  }

  late final _CCoreMPLVerifyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint8 Function(CBasicSchemeMPL, CG1Element, ffi.Pointer<ffi.Void>,
              size_t, CG2Element)>>('CCoreMPLVerify');
  late final _CCoreMPLVerify = _CCoreMPLVerifyPtr.asFunction<
      int Function(CBasicSchemeMPL, CG1Element, ffi.Pointer<ffi.Void>, int,
          CG2Element)>();

  CG1Element CCoreMPLAggregatePubKeys(
    CCoreMPL scheme,
    ffi.Pointer<ffi.Pointer<ffi.Void>> pubKeys,
    int pkLen,
  ) {
    return _CCoreMPLAggregatePubKeys(
      scheme,
      pubKeys,
      pkLen,
    );
  }

  late final _CCoreMPLAggregatePubKeysPtr = _lookup<
      ffi.NativeFunction<
          CG1Element Function(CCoreMPL, ffi.Pointer<ffi.Pointer<ffi.Void>>,
              size_t)>>('CCoreMPLAggregatePubKeys');
  late final _CCoreMPLAggregatePubKeys =
      _CCoreMPLAggregatePubKeysPtr.asFunction<
          CG1Element Function(
              CCoreMPL, ffi.Pointer<ffi.Pointer<ffi.Void>>, int)>();

  CG2Element CCoreMPLAggregateSigs(
    CCoreMPL scheme,
    ffi.Pointer<ffi.Pointer<ffi.Void>> sigs,
    int sigLen,
  ) {
    return _CCoreMPLAggregateSigs(
      scheme,
      sigs,
      sigLen,
    );
  }

  late final _CCoreMPLAggregateSigsPtr = _lookup<
      ffi.NativeFunction<
          CG2Element Function(CCoreMPL, ffi.Pointer<ffi.Pointer<ffi.Void>>,
              size_t)>>('CCoreMPLAggregateSigs');
  late final _CCoreMPLAggregateSigs = _CCoreMPLAggregateSigsPtr.asFunction<
      CG2Element Function(CCoreMPL, ffi.Pointer<ffi.Pointer<ffi.Void>>, int)>();

  CPrivateKey CCoreMPLDeriveChildSk(
    CCoreMPL scheme,
    CPrivateKey sk,
    int index,
  ) {
    return _CCoreMPLDeriveChildSk(
      scheme,
      sk,
      index,
    );
  }

  late final _CCoreMPLDeriveChildSkPtr = _lookup<
      ffi.NativeFunction<
          CPrivateKey Function(
              CCoreMPL, CPrivateKey, ffi.Uint32)>>('CCoreMPLDeriveChildSk');
  late final _CCoreMPLDeriveChildSk = _CCoreMPLDeriveChildSkPtr.asFunction<
      CPrivateKey Function(CCoreMPL, CPrivateKey, int)>();

  CPrivateKey CCoreMPLDeriveChildSkUnhardened(
    CCoreMPL scheme,
    CPrivateKey sk,
    int index,
  ) {
    return _CCoreMPLDeriveChildSkUnhardened(
      scheme,
      sk,
      index,
    );
  }

  late final _CCoreMPLDeriveChildSkUnhardenedPtr = _lookup<
      ffi.NativeFunction<
          CPrivateKey Function(CCoreMPL, CPrivateKey,
              ffi.Uint32)>>('CCoreMPLDeriveChildSkUnhardened');
  late final _CCoreMPLDeriveChildSkUnhardened =
      _CCoreMPLDeriveChildSkUnhardenedPtr.asFunction<
          CPrivateKey Function(CCoreMPL, CPrivateKey, int)>();
